# voxtype-tray

./: .gitignore  Cargo.toml  README.md  install  install.sh
.github/workflows/: release.yml
src/: main.rs
