[package]
name = "voxtype-tray"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "voxtype-tray"
path = "src/main.rs"

[dependencies]
ksni = { version = "0.3", features = ["blocking"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = "z"      # size over speed (tiny binary)
lto = true
codegen-units = 1
strip = true
